# duifene_sign

./: CMakeLists.txt  readme.md
include/: duifene_sign.h  duifene_sign_c.h
samples/: CMakeLists.txt  sample.cpp  sample_c.cpp
src/: CMakeLists.txt  duifene_sign.cpp  duifene_sign_c.cpp
